# twocan

./: AUTHORS  ChangeLog  EW_COMPAT  README  THANKS  VERSION
files/: .cvsignore
files/help/: example  formats  general  residents  rules  su
files/sys/: .cvsignore  tips
junk/: .cvsignore
lib/: README
logs/: .cvsignore
scripts/: .cvsignore  backups_run.in  clean_old_bins.in  make_talker_build.sh  make_talker_patch.sh
skel/: dist_copy_index  dist_rm_index  pre_rm
skel/dist_copy/files/: hangman.words
skel/dist_copy/src/: local_talker.c
src/: .cvsignore  ChangeLog  Makefile.in  Makefile.orig  README  admin.c  alarm.c  alias.c  angel.c  assert_loop.c  auth_player.c  autoexec.c  backups.c  blank.c  boot.c  buffers.c  bugs.html  channels.c  check.c  check_receive.c  child_com.c  chlim.c  cmd_line.c  cmds_list.c  colourise.c  commands.c  communication.c  construct_names.c  converse.c  copy_str.c  crazynews.c  devel.html  disk.c  display_time.c  dl_load.c  dns.c  draughts.c  editor.c  email.c  familiars.c  (+75 more)
src/Documentation/: Documentation.INDEX  INDEX  all_twinkles  coding_style.README  draughts_board.README  logs.README  player_find.README  portability.README  sps.README  stats_files.README  tell_players.README  termcap.README
src/angelserver/: .cvsignore  Makefile.orig  angel.c  angel.h  child_com.c  child_com.h  copy_str.h  disk.c  disk.h  display_time.h  extern-child_com.h  extern-copy_str.h  extern-disk.h  extern-toggle.h  extern-tools.h  extern-trace.h  extern-user_configure.h  log.c  main.h  main_system.h  trace.c  trace.h  user_configure.c  user_configure.h
src/dnsserver/: .cvsignore  Makefile.orig  assert_loop.c  config.h  dns.c  dns.h  dns_child.c  extern-log.h  extern-sys_rlim.h  main.h  safemalloc.c  safemalloc.h  structs.h  sys_rlim.h  tools.h
src/forward-server/: .cvsignore  Makefile.orig  connect.c  connect.h  display_time.c  extern-safemalloc.h  fix.c  fix.h  leave_msg.txt  log.h  main.c  main.h  no_stack_here.h  tools.c
src/i-comserver/: .cvsignore  Makefile.orig  assert_loop.h  autoconf.h  extern-assert_loop.h  extern-display_time.h  extern-intercom.h  extern-intercom_signals.h  glue_intercom.h  intercom.c  intercom.h  intercom_signals.c  log.c  main.h
src/i-comserver/tmp/: .cvsignore  test1.c  test1a.c  test1b.c  test2.c  test3.c  test4.c  (+1 more)
src/include/: .cvsignore  alarm.h  alias.h  angel.h  assert_loop.h  auth_player.h  autoconf.h.in  autoexec.h  boot.h  buffers.h  channels.h  check_receive.h  child_com.h  chlim.h  cmds_list.h  colourise.h  config.h  construct_names.h  crazynews.h  defines.h  disk.h  display_time.h  dl_load.h  dns.h  draughts.h  editor.h  email.h  familiars.h  games.h  get_parameter.h  glue_intercom.h  hangman.h  help.h  idle.h  last_command.h  last_logon.h  lists.h  load_player.h  log.h  logoff.h  (+50 more)
src/lib/: .cvsignore  build.sh
src/lib/socket_poll/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.guess  configure  configure.in  gnome-config-missing.sh.in  mkinstalldirs  pre_configure  shtool  socket_poll.spec.in  socket_pollConf.sh.in
src/lib/socket_poll/Documentation/: Makefile.am  Makefile.in  constants.html  constants.txt  functions.html  functions.txt  namespace.html  namespace.txt  overview.html  overview.txt  txt2html.pl
src/lib/socket_poll/include/: .cvsignore  Makefile.am  Makefile.in  assert_loop-extern.h  autoconf.h.in  fix.h  main.h  main_system.h  socket_poll-const.h  socket_poll-def.h  socket_poll-extern.h  socket_poll-switch.h  socket_poll.h  tools-extern.h
src/lib/socket_poll/src/: .cvsignore  Makefile.am  Makefile.in  assert_loop.c  fix.c  socket_poll.c
src/lib/timer_q/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  VERSION  config.sub  configure  configure.in  mkinstalldirs  pre_configure  shtool  timer_q.spec.in  timer_qConf.sh.in
src/lib/timer_q/Documentation/: .cvsignore  Makefile.am  Makefile.in  compatability.html  compatability.txt  constants.html  constants.txt  functions.html  functions.txt  namespace.html  namespace.txt  overview.html  overview.txt  txt2html.pl
src/lib/timer_q/examples/: .cvsignore  Makefile  ex1.c  ex2.c
src/lib/timer_q/include/: .cvsignore  Makefile.am  Makefile.in  assert_loop-def.h  assert_loop-extern.h  main.h  main_system.h  timer_q-conf.h  timer_q-const.h  timer_q-def.h  timer_q-extern.h  timer_q-switch.h  timer_q.h  tools-def.h  tools-extern.h
src/lib/timer_q/src/: .cvsignore  Makefile.am  Makefile.in  timer_q.c  timer_q_cntl.c  timer_q_diff.c
src/patch/: Makefile.orig  tmp_patch.c
src/pcre/: .cvsignore  ChangeLog  LICENCE  Makefile  README  RunTest  Tech.Notes  dftables.c  get.c  internal.h  maketables.c  pcre.3  pcre.3.html  pcre.3.txt  pcre.c  pcre.h  pcreposix.3  pcreposix.3.html  pcreposix.3.txt  pcreposix.c  pcreposix.h  pcretest.c  perltest  pgrep.c  study.c  testinput  testinput1  testinput2  testinput3  testinput4  testoutput  testoutput1  testoutput2  testoutput3  testoutput4
src/scripts/: .conf.linux  .conf.site  .configure.default  .cvsignore  check_deps  configure  configure.in  createmap  sh_autoconf_env.in  shtool  test_diff_compiles  uselinton
testing/: do_lots  newbie_logon  player_telnet  run_regresion_test  run_twinkle_tests  run_where_test
testing/test_subsys/: abcd_loop  abcdefg  test_disk.c
(+22 files in other folders)
