confexecdir := $(prefix)/doc/socket_poll-devel-$(VERSION)/
confexec_DATA =                         \
                functions.txt \
                functions.html \
                constants.txt \
                constants.html \
                namespace.txt \
                namespace.html \
                overview.txt \
                overview.html

