# See if we can cast the automake spell. -*-Makefile-*-
#

#
AUTOMAKE_OPTIONS = no-dependencies 1.4

include_HEADERS = \
                  socket_poll-conf.h \
                  socket_poll-switch.h \
                  socket_poll-const.h \
                  socket_poll-def.h \
                  socket_poll-extern.h \
                  socket_poll.h
