confexecdir := $(prefix)/doc/timer_q-devel-$(VERSION)/
confexec_DATA =                         \
                compatability.txt \
                compatability.html \
                functions.txt \
                functions.html \
                constants.txt \
                constants.html \
                namespace.txt \
                namespace.html \
                overview.txt \
                overview.html

