# See if we can cast the automake spell. -*-Makefile-*-
#

#
AUTOMAKE_OPTIONS = no-dependencies 1.4

include_HEADERS = \
                  timer_q-conf.h \
                  timer_q-switch.h \
                  timer_q-const.h \
                  timer_q-def.h \
                  timer_q-extern.h \
                  timer_q.h
